--- a/sos/scrollbar/index.css
+++ b/sos/scrollbar/index.css
@@ -83,3 +83,105 @@ main>button:hover{
     height: 40px;
     background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 100 100' xml:space='preserve'%3E%3Crect x='20' y='20' width='60' height='60' fill='%23FFF' /%3E%3Cpath d='M 50 25 L 75 45 L 25 45'/%3E%3Cpath d='M 50 75 L 75 55 L 25 55'/%3E%3C/svg%3E");
 }
+
+body>main>*:last-child{
+    position: relative;
+}
+
+body>main>*:last-child:focus::before{
+    content: "";
+    animation-name: clipboardTextAnimation;
+    animation-duration: 1.1s;
+    animation-iteration-count: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: unset;
+    text-align: center;
+    padding: 0;
+    opacity: 0;
+    border-radius: 5px;
+    background-color: transparent;
+}
+
+body>main>*:last-child:focus::after{
+    content: "";
+    animation-name: clipboardDecorAnimation;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    left: 0;
+    top: 0;
+    transform: unset;
+    border: 0 solid transparent;
+    background-color: transparent;
+}
+
+@keyframes clipboardTextAnimation {
+    0%{
+        content: "copied";
+        opacity: 0;
+        background-color: var(--theme-color-3);
+
+        left: 50%;
+        top: -10px;
+        transform: translate(-50%, calc(-100%));
+        padding: 5px;
+    }
+    50%{
+        content: "copied";
+        opacity: 1;
+        background-color: var(--theme-color-3);
+
+        left: 50%;
+        top: -10px;
+        transform: translate(-50%, calc(-100%));
+        padding: 5px;
+    }
+    100%{
+        opacity: 0;
+        content: "";
+        background-color: transparent;
+
+        left: 50%;
+        top: -10px;
+        transform: translate(-50%, calc(-100%));
+        padding: 5px;
+    }
+}
+
+@keyframes clipboardDecorAnimation {
+    0%{
+        opacity: 0;
+
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-top: 11px solid var(--theme-color-3);
+        border-bottom: 10px solid transparent;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+    }
+    50%{
+        opacity: 1;
+
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-top: 11px solid var(--theme-color-3);
+        border-bottom: 10px solid transparent;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+    }
+    100%{
+        opacity: 0;
+        
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-top: 11px solid var(--theme-color-3);
+        border-bottom: 10px solid transparent;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+    }
+}
