--- a/sos/button/index.css
+++ b/sos/button/index.css
@@ -34,100 +34,44 @@ body>main>*:last-child{
     position: relative;
 }
 
-body>main>*:last-child:focus::before{
-    content: "";
-    animation-name: clipboardTextAnimation;
-    animation-duration: 1.1s;
-    animation-iteration-count: 1;
-    position: absolute;
-    left: 0;
-    top: 0;
-    transform: unset;
-    text-align: center;
-    padding: 0;
+body>main>*:last-child::before{
+    content: "copied";
     opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transition: 0s 1s;
+    text-align: center;
     border-radius: 5px;
-    background-color: transparent;
 }
 
-body>main>*:last-child:focus::after{
+body>main>*:last-child:active::before{
+    opacity: 1;
+    top: -10px;
+    transform: translate(-50%, calc(-100%));
+    background-color: var(--theme-color-3);
+    padding: 5px;
+    transition: 0s;
+}
+
+body>main>*:last-child::after{
     content: "";
-    animation-name: clipboardDecorAnimation;
-    animation-duration: 1s;
-    animation-iteration-count: 1;
+    opacity: 0;
     position: absolute;
-    display: block;
+    top: 0;
+    left: 50%;
     width: 0;
     height: 0;
-    left: 0;
-    top: 0;
-    transform: unset;
-    border: 0 solid transparent;
-    background-color: transparent;
+    transition: 0s 1s;
+    text-align: center;
+    border: 10px solid transparent;
 }
 
-@keyframes clipboardTextAnimation {
-    0%{
-        content: "copied";
-        opacity: 0;
-        background-color: var(--theme-color-3);
+body>main>*:last-child:active::after{
+    opacity: 1;
 
-        left: 50%;
-        top: -10px;
-        transform: translate(-50%, calc(-100%));
-        padding: 5px;
-    }
-    50%{
-        content: "copied";
-        opacity: 1;
-        background-color: var(--theme-color-3);
-
-        left: 50%;
-        top: -10px;
-        transform: translate(-50%, calc(-100%));
-        padding: 5px;
-    }
-    100%{
-        opacity: 0;
-        content: "";
-        background-color: transparent;
-
-        left: 50%;
-        top: -10px;
-        transform: translate(-50%, calc(-100%));
-        padding: 5px;
-    }
-}
-
-@keyframes clipboardDecorAnimation {
-    0%{
-        opacity: 0;
-
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border-top: 11px solid var(--theme-color-3);
-        border-bottom: 10px solid transparent;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-    }
-    50%{
-        opacity: 1;
-
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border-top: 11px solid var(--theme-color-3);
-        border-bottom: 10px solid transparent;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-    }
-    100%{
-        opacity: 0;
-        
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border-top: 11px solid var(--theme-color-3);
-        border-bottom: 10px solid transparent;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-    }
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-top: 11px solid var(--theme-color-3);
+    transition: 0s;
 }
