cleanup + some fixes + accessability

--- a/styles/index.css
+++ b/styles/index.css
@@ -79,9 +79,11 @@ body>main{
 }
 
 #output{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 main>button{
