--- a/sos/select/index.css
+++ b/sos/select/index.css
@@ -41,7 +41,7 @@
     display: block;
     width: 40px;
     height: 40px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg transform-origin='12 12' transform='scale(0.5 0.25)'%3E%3Cpath fill='none' stroke-width='3' stroke='%23000' d='M0 0L12 24L24 0'/%3E%3C/g%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg transform-origin='12 12' transform='scale(0.5 0.25)'%3E%3Cpath fill='none' stroke-width='3' stroke='%23000' stroke-linecap='round' d='M0 0L12 24L24 0'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 #arrowIconTriangle::after{
@@ -50,4 +50,8 @@
     width: 40px;
     height: 40px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg transform-origin='12 12' transform='scale(0.5 0.25)'%3E%3Cpath fill='%23000' d='M0 0L24 0L12 24'/%3E%3C/g%3E%3C/svg%3E");
+}
+
+div:has(#arrowIconTriangle:checked)~#arrowWidth, div:has(#arrowIconTriangle:checked)~label[for="arrowWidth"]{
+    display: none;
 }
