--- a/sos/checkbox/index.css
+++ b/sos/checkbox/index.css
@@ -7,6 +7,8 @@
 #checkIconCheck, #checkIconCross{
     appearance: none;
     cursor: pointer;
+    width: 40px;
+    height: 40px;
 }
 
 #checkIconCheck::before, #checkIconCross::before{
