--- a/sos/scrollbar/index.css
+++ b/sos/scrollbar/index.css
@@ -7,6 +7,8 @@
 #trackStyleThin, #trackStyleThick{
     appearance: none;
     cursor: pointer;
+    width: 40px;
+    height: 40px;
 }
 
 #trackStyleThin::before, #trackStyleThick::before{
