--- a/sos/select/index.css
+++ b/sos/select/index.css
@@ -7,6 +7,8 @@
 #arrowIconCorner, #arrowIconTriangle{
     appearance: none;
     cursor: pointer;
+    width: 40px;
+    height: 40px;
 }
 
 #arrowIconCorner::before, #arrowIconTriangle::before{
