--- a/styles/index.css
+++ b/styles/index.css
@@ -204,7 +204,7 @@ main>button:last-child::before{
 main>button:last-child:active::before{
     opacity: 1;
     top: -10px;
-    transform: translate(-50%, calc(-100%));
+    transform: translate(-50%, -100%);
     background-color: var(--theme-color-3);
     padding: 5px;
     transition: 0s;
