--- a/sos/gradient/index.css
+++ b/sos/gradient/index.css
@@ -1,3 +1,8 @@
+*:has(#gradientTypeRadial:checked)~#gradientAngle,
+*:has(#gradientTypeRadial:checked)~*[for="gradientAngle"]{
+    display: none;
+}
+
 #colorCount[value*="2"]~*[id*="2"],
 #colorCount[value*="2"]~*[for*="2"],
 #colorCount[value*="2"]~*[id*="3"],
@@ -11,4 +16,60 @@
 #colorCount[value*="4"]~*[id*="4"],
 #colorCount[value*="4"]~*[for*="4"]{
     display: none;
+}
+
+#controls>div{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#gradientTypeLinear, #gradientTypeRadial{
+    appearance: none;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+}
+
+#gradientTypeLinear::before, #gradientTypeRadial::before{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    -webkit-mask-size: 40px;
+    mask-size: 40px;
+    -webkit-mask-position: center center;
+    mask-position: center center;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-blend-mode: overlay;
+}
+
+#gradientTypeLinear:hover::before, #gradientTypeRadial:hover::before{
+    background-color: var(--theme-color-1);
+    -webkit-mask-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 100 100' xml:space='preserve'%3E%3Ccircle cx='50' cy='50' r='45' stroke='%23000' fill='transparent' stroke-width='5' /%3E%3C/svg%3E");
+    mask-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 100 100' xml:space='preserve'%3E%3Ccircle cx='50' cy='50' r='45' stroke='%23000' fill='transparent' stroke-width='5' /%3E%3C/svg%3E");
+}
+
+#gradientTypeLinear:checked::before, #gradientTypeRadial:checked::before{
+    background-color: var(--theme-color-3);
+    -webkit-mask-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 100 100' xml:space='preserve'%3E%3Ccircle cx='50' cy='50' r='45' stroke='%23000' fill='transparent' stroke-width='5' /%3E%3C/svg%3E");
+    mask-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 100 100' xml:space='preserve'%3E%3Ccircle cx='50' cy='50' r='45' stroke='%23000' fill='transparent' stroke-width='5' /%3E%3C/svg%3E");
+}
+
+#gradientTypeLinear::after{
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 330 330' xmlns:v='https://vecta.io/nano'%3E%3Cpath d='M15 180h263.787l-49.394 49.394c-5.858 5.857-5.858 15.355 0 21.213C232.322 253.535 236.161 255 240 255a14.95 14.95 0 0 0 10.606-4.394l75-75c5.858-5.857 5.858-15.355 0-21.213l-75-75c-5.857-5.857-15.355-5.857-21.213 0s-5.858 15.355 0 21.213L278.787 150H15c-8.284 0-15 6.716-15 15s6.716 15 15 15z' transform='scale(.5)' transform-origin='center'/%3E%3C/svg%3E");
+}
+
+#gradientTypeRadial::after{
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' xmlns:v='https://vecta.io/nano'%3E%3Cg transform='scale(.75)' transform-origin='center' stroke='%23000' fill='none'%3E%3Ccircle cx='12' cy='12' r='10'/%3E%3Ccircle cx='12' cy='12' r='5'/%3E%3C/g%3E%3C/svg%3E");
 }
