--- a/styles/index.css
+++ b/styles/index.css
@@ -41,7 +41,16 @@ body{
     background-color: var(--theme-color-0);
 }
 
-header, footer{
+header{
+    display: grid;
+    grid-template-columns: var(--header-height) 1fr var(--header-height);
+    justify-content: center;
+    align-items: center;
+    grid-column: 1 / span 2;
+    background-color: var(--theme-color-0);
+}
+
+footer{
     display: grid;
     justify-content: center;
     align-items: center;
@@ -50,8 +59,19 @@ header, footer{
 }
 
 h1{
+    grid-column: 2 / span 1;
     margin: 0;
     text-align: center;
+}
+
+header>a{
+    grid-column: 3 / span 1;
+    top: 0;
+    right: 0;
+    width: calc(var(--header-height) * 0.8);
+    height: calc(var(--header-height) * 0.8);
+    padding: 5px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' xmlns:v='https://vecta.io/nano'%3E%3Cpath d='M16 .396c-8.839 0-16 7.167-16 16 0 7.073 4.584 13.068 10.937 15.183.803.151 1.093-.344 1.093-.772l-.015-2.719c-4.453.964-5.391-2.151-5.391-2.151-.729-1.844-1.781-2.339-1.781-2.339-1.448-.989.115-.968.115-.968 1.604.109 2.448 1.645 2.448 1.645 1.427 2.448 3.744 1.74 4.661 1.328.14-1.031.557-1.74 1.011-2.135-3.552-.401-7.287-1.776-7.287-7.907 0-1.751.62-3.177 1.645-4.297-.177-.401-.719-2.031.141-4.235 0 0 1.339-.427 4.4 1.641 1.281-.355 2.641-.532 4-.541 1.36.009 2.719.187 4 .541 3.043-2.068 4.381-1.641 4.381-1.641.859 2.204.317 3.833.161 4.235 1.015 1.12 1.635 2.547 1.635 4.297 0 6.145-3.74 7.5-7.296 7.891.556.479 1.077 1.464 1.077 2.959l-.02 4.385c0 .416.28.916 1.104.755 6.4-2.093 10.979-8.093 10.979-15.156 0-8.833-7.161-16-16-16z'/%3E%3C/svg%3E");
 }
 
 nav{
@@ -77,7 +97,6 @@ main{
     gap: 5px;
     padding: 5px;
 }
-
 
 @media (max-width: 700px){
     html{
@@ -229,6 +248,19 @@ main>button:last-child:active::after{
     transform: translate(-50%, -50%);
     border-top: 11px solid var(--theme-color-3);
     transition: 0s;
+}
+
+#controls>input[type="text"]{
+    appearance: none;
+    background-color: var(--theme-color-1);
+    border: 5px solid var(--theme-color-0);
+    border-radius: 5px;
+}
+
+@media (hover: hover) {
+    #controls>input[type="text"]:not([disabled]):hover{
+        filter: brightness(120%);
+    }
 }
 
 #controls>input[type="range"]{
@@ -400,11 +432,18 @@ main>button:last-child:active::after{
     border: none;
 }
 
-#controls>input[type="color"]::-webkit-color-swatch-wrapper {
+#controls>input[type="color"]::-webkit-color-swatch-wrapper{
     padding: 0;
     border-radius: 0;
 }
 
-#controls>input[type="color"]::-webkit-color-swatch {
+#controls>input[type="color"]::-webkit-color-swatch{
     border: none;
+}
+
+@media (hover: hover) {
+    #controls>input[type="color"]:hover{
+        border: 5px solid var(--theme-color-1);
+        cursor: pointer;
+    }
 }
